--- a/TwsPluginCore/src/main/AndroidManifest.xml
+++ b/TwsPluginCore/src/main/AndroidManifest.xml
@@ -10,28 +10,17 @@
             android:authorities="${applicationId}.svcmgr"
             android:exported="true" />
 
+        <receiver
+            android:name="com.tws.plugin.bridge.TwsPluginBridgeReceiver"
+            android:exported="true"/>
+        <service android:name="com.tws.plugin.bridge.TwsPluginBridgeService"/>
+
         <!-- core need-->
         <provider
             android:name="com.tws.plugin.manager.PluginManagerProvider"
             android:authorities="com.rick.tws.pluginhost.manager"
             android:exported="false"
             android:process=":pmaster" />
-
-        <!--这个是Activity跳板组件，运行在宿主进程中，方便启用跳板的功能-->
-        <activity
-            android:name="com.tws.plugin.bridge.TwsPluginBridgeActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_BRIDGE" />
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="com.tws.plugin.bridge.category.SAMPLE_RAMP" />
-
-                <data android:scheme="qwallet1800001531" />
-                <data android:scheme="tsmclient" />
-            </intent-filter>
-        </activity>
 
         <!-- 对Receiver的类全名没有要求，可随意指定，框架中是通过action来查询。注册1个即可(广播自身是ipc通讯的,运行在宿主进程) -->
         <receiver
