test:Let the plug-in run in a separate process【验证是可行的，只是log以及调试 发现和host主进程绑定在一起了，这个不知道是不是AS的缘故还是这种坑位方案造成系统错乱的缘故，待查】

--- a/TwsPluginBurgeon/src/main/AndroidManifest.xml
+++ b/TwsPluginBurgeon/src/main/AndroidManifest.xml
@@ -6,12 +6,13 @@
     android:versionName="1.0.2">
 
     <application
+        android:name="com.example.plugin.burgeon.BurgeonApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:process=":pmaster"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:process=":pmaster"
         android:theme="@style/AppTheme">
 
         <!-- 分隔符： # 分割DisplayConfig； @ 分割DisplayConfig的属性； = 属性赋值； / 分割属性值 -->
