调整一下PluginManagerProvider运行的进程为宿主，既然实例需要在宿主获取插件的info以及fragment，干脆就让provider跑在宿主进程

--- a/TwsPluginCore/src/main/AndroidManifest.xml
+++ b/TwsPluginCore/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         <provider
             android:name="com.tws.plugin.manager.PluginManagerProvider"
             android:authorities="com.rick.tws.pluginhost.manager"
-            android:exported="false"
-            android:process=":pmaster" />
+            android:exported="false" />
 
         <!-- 对Receiver的类全名没有要求，可随意指定，框架中是通过action来查询。注册1个即可(广播自身是ipc通讯的,运行在宿主进程) -->
         <receiver
