--- a/TwsPluginHost/src/main/AndroidManifest.xml
+++ b/TwsPluginHost/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <application
-        android:name="com.rick.tws.pluginhost.main.HostApplication"
+        android:name=".main.HostApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -80,7 +80,7 @@
             android:name="com.tws.plugin.bridge.TwsPluginBridgeActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="com.rick.tws.pluginhost.STUB_BRIDGE" />
+                <action android:name="${applicationId}.STUB_BRIDGE" />
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.DEFAULT" />
