--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':TwsPluginHost', ':TwsPluginCore', ':TwsPluginShareLib', ':TwsPluginDemo', ':TwsPluginBurgeon'
+include ':TwsPluginHost', ':TwsPluginCore', ':TwsPluginShareLib', ':TwsPluginDemo', ':TwsPluginBurgeon', ':TwsPluginSecondo'
