--- a/TwsPluginHost/build.gradle
+++ b/TwsPluginHost/build.gradle
@@ -41,7 +41,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:appcompat-v7:25.1.1'
     compile project(':TwsPluginCore')
     compile project(':TwsPluginShareLib')
 }
