--- a/config.gradle
+++ b/config.gradle
@@ -27,4 +27,10 @@ ext {
     minSdkVersion = 19
     targetSdkVersion = 25
     compileSdkVersion = 25
+
+    dependencies = [
+            appcompat_v7: 'com.android.support:appcompat-v7:25.1.1',
+            support_v4: 'com.android.support:support-v4:25.1.1',
+            support_design: 'com.android.support:design:25.1.1',
+    ]
 }
